# DigitalClockNext

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  widget.cpp  widget.hpp
.github/workflows/: ci_macos.yaml  ci_ubuntu.yaml  ci_windows.yaml
app/: application.cpp  application.hpp  application_core.cpp  application_private.hpp  application_windows.cpp  classic_skin_settings.cpp  classic_skin_settings.hpp  classic_skin_settings.ui  clock_widget.cpp  clock_widget.hpp  clock_window.cpp  clock_window.hpp  settings_dialog.cpp  settings_dialog.hpp  settings_dialog.ui  skin_manager.cpp  skin_manager.hpp
clock/: char_renderable.hpp  char_renderable_factory.hpp  clock_widget.hpp  datetime_formatter.hpp  legacy_skin_extension.hpp  legacy_skin_format_extension.hpp  time_source.hpp
core/: effect.hpp  layout.hpp  layout_builder.hpp  layout_builder_impl.hpp  layout_item.hpp  linear_layout.hpp  renderable.hpp  renderable_item.hpp
dep/: CMakeLists.txt
doc/: extended_legacy_skin_format.md  readme.md
docs/: extended_legacy_skin_format.md
render/: char_renderable.hpp  composite_effect.hpp  layout.hpp  layout_renderer.hpp  legacy_image_renderable.hpp  renderable_base.hpp  state_guard.hpp  state_guard_qpainter.hpp  texturing_effect.hpp
res/: icons.qrc  skins.qrc
res/skins/dseg/: readme.txt  skin.json
res/skins/electronic/: skin.ini
settings/: app_config.hpp  backend_qsettings.hpp  config_base.hpp  config_base_qvariant.hpp  fr_app_global.hpp  fr_appearance.hpp  fr_classic_skin.hpp  fr_state.hpp  fr_window_state.hpp  settings.hpp
skin/: char_renderable_factory.hpp  classic_skin.hpp  classic_skin_loader.hpp  clock_skin.hpp  legacy_image_renderable.hpp  legacy_skin_loader.hpp  legacy_skin_validator.cpp  legacy_skin_validator.hpp  renderable_factory.hpp
src/: CMakeLists.txt  main.cpp  version.hpp.in
src/app/: CMakeLists.txt  about_dialog.cpp  about_dialog.hpp  about_dialog.ui  application.cpp  application.hpp  application_config.cpp  application_core.cpp  application_private.hpp  application_tray.cpp  application_windows.cpp  build_date.cpp  build_date.hpp  classic_skin_settings.cpp  classic_skin_settings.hpp  classic_skin_settings.ui  clock_icon_engine.cpp  clock_icon_engine.hpp  clock_tray_icon.cpp  clock_tray_icon.hpp  clock_widget.cpp  clock_widget.hpp  clock_widget_impl.hpp  clock_window.cpp  clock_window.hpp  dialog_manager.hpp  logo_label.cpp  logo_label.hpp  settings_dialog.cpp  settings_dialog.hpp  settings_dialog.ui  settings_manager.cpp  settings_manager.hpp  skin_manager.cpp  skin_manager.hpp  time_source.hpp  update_checker.cpp  update_checker.hpp  window_positioning.cpp  window_positioning.hpp  (+1 more)
src/app/platform/: CMakeLists.txt
src/app/platform/win/: stay_on_top_hacks.cpp  stay_on_top_hacks.hpp
src/app/settings/: CMakeLists.txt  app_global_settings.cpp  app_global_settings.hpp  app_global_settings.ui  app_globalsettings.cpp  app_globalsettings.hpp  app_globalsettings.ui  classic_skin_settings.cpp  classic_skin_settings.hpp  classic_skin_settings.ui  debug_settings.cpp  debug_settings.hpp  debug_settings.ui  settings_dialog.cpp  settings_dialog.hpp  settings_dialog.ui  time_format_settings.cpp  time_format_settings.hpp  time_format_settings.ui
src/app/updater/: build_date.cpp  build_date.hpp  http_client.cpp  http_client.hpp  updater.cpp  updater.hpp
src/clock/: clock_widget.hpp  datetime_formatter.cpp  datetime_formatter.hpp  time_source.hpp
src/core/: CMakeLists.txt  effect.hpp  geometry.hpp  glyph.cpp  glyph.hpp  hashable.hpp  hasher.hpp  item_geometry.hpp  layout.cpp  layout.hpp  layout_algorithm.hpp  layout_debug.cpp  layout_debug.hpp  layout_item.hpp  linear_layout.cpp  linear_layout.hpp  renderable.hpp  renderable_item.hpp  rendering.cpp  rendering.hpp  resource.cpp  resource.hpp  skin_resource.hpp
src/render/: CMakeLists.txt  background_effect.cpp  background_effect.hpp  char_renderable.cpp  char_renderable.hpp  composite_effect.cpp  composite_effect.hpp  effect.hpp  effects.cpp  effects.hpp  effects_hashing.cpp  effects_hashing.hpp  font_resource.cpp  font_resource.hpp  frame_border_effect.cpp  frame_border_effect.hpp  geometry.hpp  glyph_geometry.hpp  identity_effect.hpp  image_resource.cpp  image_resource.hpp  layout_renderable.hpp  layout_renderer.hpp  legacy_image_renderable.hpp  renderable_hashing.cpp  renderable_hashing.hpp  rendering.cpp  rendering.hpp  resource_factory.hpp  skin_resource.hpp  state_guard.hpp  texturing_effect.cpp  texturing_effect.hpp
src/render/effects/: background.cpp  background.hpp  composite.cpp  composite.hpp  frame_border.cpp  frame_border.hpp  identity.hpp  texturing.cpp  texturing.hpp
src/settings/: CMakeLists.txt  app_config.hpp  app_state.cpp  app_state.hpp  backend_qsettings.hpp  config_base_qvariant.hpp  conversion_qvariant.hpp  fr_appearance.hpp  fr_classic_skin.hpp  fr_general.hpp  fr_window_state.hpp  sample_values.cpp  state_base_qvariant.hpp
src/settings/core/: config_base.hpp  settings.hpp  state_base.hpp
src/settings/sections/: app_global.hpp  appearance.hpp  classic_skin.cpp  classic_skin.hpp  debug.hpp  general.hpp  sample_values.hpp  window_state.cpp  window_state.hpp
src/skin/: CMakeLists.txt  char_renderable_factory.hpp  classic_skin.cpp  classic_skin.hpp  classic_skin_loader.hpp  clock_skin.hpp  datetime_formatter.cpp  datetime_formatter.hpp  error_skin.cpp  error_skin.hpp  legacy_skin_loader.cpp  legacy_skin_loader.hpp  modern_skin.cpp  modern_skin.hpp  modern_skin_loader.cpp  modern_skin_loader.hpp  observable.hpp  renderable_factory.hpp  skin.hpp  skin_visitor.hpp
test/: CMakeLists.txt  fake_resource.hpp  test_datetime_formatter.cpp  test_item_geometry.cpp  test_layout.cpp  test_layout_item.cpp  test_linear_layout.cpp  test_placeholder.cpp  test_settings_core.cpp
